# autoboot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/tdd/: SKILL.md
configs/allen/: config.yaml
configs/barry/: config.yaml
configs/betty/: config.yaml
configs/example/: config.yaml
configs/roxy/: config.yaml
docs/: tutorials.md
docs/plans/: 2026-04-17-handoff.md  TEMPLATE-feature.md
keys/: ansible.pub
scripts/: build-iso.sh  flash-usb.sh  setup-dependencies.sh
src/autoboot/: __init__.py  build.py  cli.py  config.py  flash.py  iso.py  models.py  paths.py  test.py
src/autoboot/distros/: __init__.py  base.py  debian.py  fedora.py  ubuntu.py
templates/debian/: preseed.cfg.j2
templates/fedora/: kickstart.ks.j2
templates/ubuntu/: meta-data.j2  user-data.yaml.j2
tests/: conftest.py
tests/bats/: test_build_iso.bats  test_flash_usb.bats
tests/docker/: Dockerfile  conftest.py  test_iso_build.py
tests/e2e/: conftest.py  debian-preseed.pkr.hcl  fedora-kickstart.pkr.hcl  run-e2e.sh  test_vm_ubuntu.py  ubuntu-autoinstall.pkr.hcl  validate-install.yml
tests/fixtures/configs/e2e-ubuntu/: config.yaml
tests/fixtures/keys/: ansible  ansible.pub
tests/integration/: test_config_rendering.py
tests/unit/: test_build.py  test_cli.py  test_config.py  test_flash.py  test_iso.py  test_models.py  test_paths.py  test_test.py
tests/unit/test_distros/: test_debian.py  test_fedora.py  test_registry.py  test_ubuntu.py
